--- a/app.html
+++ b/app.html
@@ -24,7 +24,9 @@
             }
 
             var i = ["init", "logEvent", "logRevenue", "setUserId", "setUserProperties", "setOptOut", "setVersionName", "setDomain", "setDeviceId", "setGlobalUserProperties"];
-            for ( var o = 0; o < i.length; o++ ) {a(i[o])}
+            for (var o = 0; o < i.length; o++) {
+                a(i[o])
+            }
             e.amplitude = r
         })(window, document);
 
@@ -32,7 +34,7 @@
     </script>
 
     <script type="text/javascript">(function (f, b) {
-        if ( !b.__SV ) {
+        if (!b.__SV) {
             var a, e, i, g;
             window.mixpanel = b;
             b._i = [];
@@ -40,7 +42,9 @@
                 function f(b, h) {
                     var a = h.split(".");
                     2 == a.length && (b = b[a[0]], h = a[1]);
-                    b[h] = function () {b.push([h].concat(Array.prototype.slice.call(arguments, 0)))}
+                    b[h] = function () {
+                        b.push([h].concat(Array.prototype.slice.call(arguments, 0)))
+                    }
                 }
 
                 var c = b;
@@ -52,9 +56,11 @@
                     b || (a += " (stub)");
                     return a
                 };
-                c.people.toString = function () {return c.toString(1) + ".people (stub)"};
+                c.people.toString = function () {
+                    return c.toString(1) + ".people (stub)"
+                };
                 i = "disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
-                for ( g = 0; g < i.length; g++ )f(c, i[g]);
+                for (g = 0; g < i.length; g++)f(c, i[g]);
                 b._i.push([a, e, d])
             };
             b.__SV = 1.2;
@@ -81,24 +87,26 @@
 <template name="login">
     <div class="row animated pulse">
         <br>
-<div class="col-md-4 col-md-offset-4">
-        <p style="text-align: center;font-size: 18px;padding-top: 100px;">
-            <img src="/icon.png" width="180px" height="180px"><br>
 
-        </p>
-        <br>
+        <div class="col-md-4 col-md-offset-4">
+            <p style="text-align: center;font-size: 18px;padding-top: 100px;">
+                <img src="/icon.png" width="180px" height="180px"><br>
+
+            </p>
+            <br>
 
             <button id="tw" class="btn btn-primary btn-block"><i class="fa fa-twitter"></i>&nbsp;&nbsp;Twitter Login
             </button>
-    </div>
+        </div>
     </div>
 </template>
 
 <template name="home">
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-2">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -118,50 +126,73 @@
 
 
     <div class="row">
+        <div class="col-md-7">
+            {{> videos}}
+        </div>
+
+        <div class="col-md-5">
+            <div style="margin-top:45px;">
+                {{#each timelines}}
+                    <div class="row">
+                        {{#if tweet.retweeted_status}}
+
+                            <div class="col-md-2">
+                                <img class="" src="{{this.tweet.retweeted_status.user.profile_image_url}}">
+                            </div>
 
 
-            <div class="col-md-5 col-md-offset-7">
+                            <div class="col-md-10">
+                                <div style="display: inline-flex"> {{this.tweet.retweeted_status.user.name}}&nbsp;
+                                    <div class="twHandle">@{{this.tweet.retweeted_status.user.screen_name}}</div>
+                                </div>
+                                <p style="color:#474747">{{this.tweet.retweeted_status.text}}</p>
 
-          {{#each timelines}}
-              <div class="row">
-                {{#if retweeted_status}}
+                                <p class="retweet"><i class="fa fa-retweet"></i> {{this.tweet.user.name}} retweeted</p>
+                            </div>
+                        {{else}}
+                            <div class="col-md-2">
+                                <img class="" src="{{this.tweet.user.profile_image_url}}">
+                            </div>
+                            <div class="col-md-10">
+                                <div style="display: inline-flex"> {{this.tweet.user.name}}&nbsp;
+                                    <div class="twHandle">@{{this.tweet.user.screen_name}}</div>
+                                </div>
+                                <p style="color:#474747">{{this.tweet.text}}</p>
 
-                    <div class="col-md-2">
-                    <img class="" src="{{this.retweeted_status.user.profile_image_url}}">
+
+                            </div>
+                        {{/if}}
                     </div>
-
-
-                    <div class="col-md-10">
-                        <div style="display: inline-flex"> {{this.retweeted_status.user.name}}&nbsp;
-                            <div class="twHandle">@{{this.retweeted_status.user.screen_name}}</div>
-                        </div>
-                        <p style="color:#474747">{{this.retweeted_status.text}}</p>
-                      {{#if retweeted_status.entities.media}}
-                          <img class="twImage" src="{{this.media_image_url}}">
-                      {{/if}}
-                        <p class="retweet"><i class="fa fa-retweet"></i> {{this.user.name}} retweeted</p>
-                    </div>
-                {{else}}
-                <div class="col-md-2">
-                    <img class="" src="{{this.user.profile_image_url}}">
-</div>
-                    <div class="col-md-10">
-                        <div style="display: inline-flex"> {{this.user.name}}&nbsp;
-                            <div class="twHandle">@{{this.user.screen_name}}</div>
-                        </div>
-                        <p style="color:#474747">{{this.text}}</p>
-                      {{#if entities.media}}
-                          <img class="twImage" src="{{this.media_image_url}}">
-                      {{/if}}
-
-                    </div>
-                {{/if}}
-              </div>
-          {{/each}}
-       </div>
+                {{/each}}
+            </div>
+        </div>
     </div>
 
 
+</template>
+
+<template name="videos">
+    <div class="fixme"
+         style="position: fixed;top: 45px;left: 0;height:450px;width:55%;z-index: 10000;background-color: #000;">
+        <iframe width="100%" height="450px" src="//www.youtube.com/embed/{{id}}?rel=0&autoplay=1"
+                frameborder="0"
+                allowfullscreen="true"></iframe>
+    </div>
+    <div style="margin-top:510px">
+        <div class="row">
+    {{#each videoList}}
+        <div class="col-md-4 grid-cols">
+            <div class="panel panel-default grid">
+                <div class="panel-body">
+                    <img class="thumbnails" src="{{this.snippet.thumbnails.medium.url}}"><br>
+
+                    <div class="nowrap">&nbsp;&nbsp;{{this.snippet.title}}</div>
+                </div>
+            </div>
+        </div>
+    {{/each}}
+        </div>
+    </div>
 </template>
 
 <template name="articles">
@@ -179,36 +210,36 @@
         <ul class="table-view">
 
             <li class="table-view-cell media">
-              {{#if type}}
-                {{#if author}}
-                    <p class="author">By {{author}} on {{date}}</p><br>
+                {{#if type}}
+                    {{#if author}}
+                        <p class="author">By {{author}} on {{date}}</p><br>
+                    {{/if}}
+
+
+                    <div class="media-body">
+                        <img class="media-icon media-object pull-left" src="{{icon}}"> {{title}}<br><br>
+
+                    </div>
+
+                    {{{data}}}
+
+                    <br><br>
+                    <h5>Know More About:</h5>
+                    <ul>
+                        {{#each tags}}
+                            <li><a class="wiki">{{this.label}}</a></li>
+                        {{/each}}
+
+                    </ul>
+
+                {{else}}
+                    <div class="media-body">
+                        Oops!! You have hit dead end :( <br>
+
+                        <p>No article can be found on this link</p>
+
+                    </div>
                 {{/if}}
-
-
-                  <div class="media-body">
-                      <img class="media-icon media-object pull-left" src="{{icon}}"> {{title}}<br><br>
-
-                  </div>
-
-                {{{data}}}
-
-                  <br><br>
-                  <h5>Know More About:</h5>
-                  <ul>
-                    {{#each tags}}
-                        <li><a class="wiki">{{this.label}}</a></li>
-                    {{/each}}
-
-                  </ul>
-
-              {{else}}
-                  <div class="media-body">
-                      Oops!! You have hit dead end :( <br>
-
-                      <p>No article can be found on this link</p>
-
-                  </div>
-              {{/if}}
             </li>
 
         </ul>
@@ -246,7 +277,7 @@
     <div class="content">
 
         <p class="wikiText">
-          {{{data}}}
+            {{{data}}}
         </p>
 
 
