--- a/app.html
+++ b/app.html
@@ -91,6 +91,9 @@
                 <ul class="nav navbar-nav">
 
                 </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a class="navbar_right" href="#"><i class="fa fa-plus-square"></i></a></li>
+                </ul>
 
 
             </div>
@@ -106,11 +109,11 @@
         <div class="col-md-5 twitter">
             <div style="margin-top:45px;">
                 {{#each timelines}}
-                    <div class="row bottom-hr">
+                    <div class="row bottom-hr ">
                         {{#if tweet.retweeted_status}}
 
                             <div class="col-md-2">
-                                <img class="" src="{{this.tweet.retweeted_status.user.profile_image_url}}">
+                                <img class="dp" src="{{this.tweet.retweeted_status.user.profile_image_url}}">
                             </div>
 
 
@@ -120,17 +123,26 @@
                                     &nbsp;&nbsp;
                                     <div class="twHandle">@{{this.tweet.retweeted_status.user.screen_name}}</div>
                                 </div>
-                                <p style="color:#474747;margin-bottom: 2px">{{this.tweet.retweeted_status.text}}</p>
+                                <p class="twitterHome"
+                                   style="color:#474747;margin-bottom: 2px">{{this.tweet.retweeted_status.text}}</p>
                                 {{#if tweet.retweeted_status.entities.media}}
                                     <img class="twImage" src="{{this.tweet.media_image_url}}">
                                 {{/if}}
                                 <p class="retweet" style="margin-bottom: 1px"><i
                                         class="fa fa-retweet"></i> {{this.tweet.user.name}} retweeted</p>
-<hr>
+
+                                <div class="btn-group btn-group-justified">
+                                    <a href="" class="btn btn-link reply"><i class="fa fa-reply"></i></a>
+                                    <a href="" class="btn btn-link retweet-status"><i
+                                            class="fa fa-retweet"></i> {{this.tweet.retweet_count}}</a>
+                                    <a href="" class="btn btn-link favourite"><i
+                                            class="fa fa-star-o"></i> {{this.tweet.favorite_count}}</a>
+                                </div>
+                                <hr>
                             </div>
                         {{else}}
                             <div class="col-md-2">
-                                <img class="" src="{{this.tweet.user.profile_image_url}}">
+                                <img class="dp" src="{{this.tweet.user.profile_image_url}}">
                             </div>
                             <div class="col-md-10">
                                 <div class="inline">
@@ -138,22 +150,49 @@
                                     &nbsp;&nbsp;
                                     <div class="twHandle">@{{this.tweet.user.screen_name}}</div>
                                 </div>
-                                <p style="color:#474747;margin-bottom: 2px">{{this.tweet.text}}</p>
+                                <p class="twitterHome" style="color:#474747;margin-bottom: 2px">{{this.tweet.text}}</p>
                                 {{#if tweet.entities.media}}
                                     <img class="twImage" src="{{this.tweet.media_image_url}}">
                                 {{/if}}
 
                                 <div class="btn-group btn-group-justified">
                                     <a href="" class="btn btn-link reply"><i class="fa fa-reply"></i></a>
-                                    <a href="" class="btn btn-link retweet-status"><i class="fa fa-retweet"></i> {{this.tweet.retweet_count}}</a>
-                                    <a href=""  class="btn btn-link favourite"><i class="fa fa-star-o"></i> {{this.tweet.favorite_count}}</a>
+                                    <a href="" class="btn btn-link retweet-status"><i
+                                            class="fa fa-retweet"></i> {{this.tweet.retweet_count}}</a>
+                                    <a href="" class="btn btn-link favourite"><i
+                                            class="fa fa-star-o"></i> {{this.tweet.favorite_count}}</a>
                                 </div>
-<hr>
+                                <hr>
                             </div>
                         {{/if}}
 
                     </div>
                 {{/each}}
+            </div>
+        </div>
+    </div>
+
+    <div class="modal " id="compose">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title">New Tweet ({{currentUser.profile.name}})</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+
+                        <div class="col-lg-11">
+                            <textarea class="form-control" id="composeText" rows="3"
+                                      placeholder="What's happening?"> </textarea>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+
+                    <button type="button" id="composeTweet" class="btn btn-primary">Tweet</button>
+                </div>
             </div>
         </div>
     </div>
@@ -169,7 +208,7 @@
                     <div class="form-group">
 
                         <div class="col-lg-11">
-                            <textarea class="form-control" id="postReplyText" rows="5">@{{replyName}} </textarea>
+                            <textarea class="form-control" id="postReplyText" rows="3">@{{replyName}} </textarea>
 
                         </div>
                     </div>
@@ -177,6 +216,44 @@
                 <div class="modal-footer">
 
                     <button type="button" id="postReply" class="btn btn-primary">Tweet</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal " id="articles">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title">{{title}}</h4>
+                </div>
+                <div class="modal-body">
+
+
+                    <div class="col-lg-12">
+
+                        {{#if type}}
+
+
+                            {{{data}}}
+
+
+                        {{else}}
+                            <div class="media-body">
+                                Oops!! You have hit dead end :( <br>
+
+                                <p>No article can be found on this link</p>
+
+                            </div>
+                        {{/if}}
+
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+
+
                 </div>
             </div>
         </div>
@@ -193,23 +270,7 @@
     </div>
     <div style="margin-top:490px">
         <div class="row">
-            <div class="DocumentList">
-                <ul class="list-inline inline">
-                    {{#each videoList}}
-                        <li class="DocumentItem">
-                            <div class="grid-cols">
-                                <div class="panel panel-default grid">
-                                    <div class="panel-body">
-                                        <img class="thumbnails" src="{{this.snippet.thumbnails.medium.url}}"><br>
 
-                                        <div class="nowrap">&nbsp;&nbsp;{{this.snippet.title}}</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    {{/each}}
-                </ul>
-            </div>
         </div>
     </div>
 </template>
