--- a/app.html
+++ b/app.html
@@ -6,7 +6,7 @@
 
 
     <script type="text/javascript">(function (f, b) {
-        if (!b.__SV) {
+        if ( !b.__SV ) {
             var a, e, i, g;
             window.mixpanel = b;
             b._i = [];
@@ -32,7 +32,7 @@
                     return c.toString(1) + ".people (stub)"
                 };
                 i = "disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
-                for (g = 0; g < i.length; g++)f(c, i[g]);
+                for ( g = 0; g < i.length; g++ )f(c, i[g]);
                 b._i.push([a, e, d])
             };
             b.__SV = 1.2;
@@ -269,9 +269,27 @@
                 allowfullscreen="true"></iframe>
     </div>
     <div style="margin-top:490px">
-        <div class="row">
 
+        <div class="row">
+            <div class="DocumentList">
+                <ul class="list-inline inline">
+                    {{#each videoList}}
+                        <li class="DocumentItem">
+                            <div class="grid-cols">
+                                <div class="panel panel-default grid">
+                                    <div class="panel-body">
+                                        <img class="thumbnails" src="{{this.snippet.thumbnails.medium.url}}"><br>
+
+                                        <div class="nowrap">&nbsp;&nbsp;{{this.snippet.title}}</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    {{/each}}
+                </ul>
+            </div>
         </div>
+
     </div>
 </template>
 
@@ -328,23 +346,6 @@
 </template>
 
 
-<template name="compose">
-
-    <header class="bar bar-nav">
-        <a href="/home" class="icon icon-left-nav pull-left"
-           velociratchet-transition="left"></a>
-
-        <h1 class="title"><i class="fa fa-pencil"></i> Compose Tweet</h1>
-    </header>
-    <div class="content">s
-        <form>
-            <br>
-            <textarea id="status" rows="5"></textarea><br><br>
-            <button class="btn btn-positive btn-block" id="tweet">Tweet</button>
-        </form>
-    </div>
-</template>
-
 <template name="wikipedia">
 
     <header class="bar bar-nav">
@@ -363,4 +364,6 @@
 
     </div>
 </template>
+
+
 
